# scidatacontainer

./: .readthedocs.yaml
.github/workflows/: python-coverage.yml  python-package.yml
docs/source/: concept.rst  configuration.rst
docs/source/python/: advanced.rst  api.rst  usage.rst
python/: pyproject.toml  test_requirements.txt
python/scidatacontainer/: __init__.py  config.py  container.py  filebase.py  filehdf5.py  fileimage.py  filenumpy.py
python/scidatacontainer/jsonschema/: SciDataContainer.content.1.0.1.schema.json  SciDataContainer.meta.1.0.1.schema.json
python/scidatacontainer/tests/: __init__.py  _abstract_container_test.py  test_abstractfile.py  test_config.py  test_download.py  test_filebinary.py  test_fileclass_deprecation.py  test_filedataset.py  test_filehdf5.py  test_fileimage.py  test_fileioobject.py  test_filejson.py  test_filenumpy.py  test_filetext.py  test_filetsv.py  test_hdf5_multistep_container.py  test_hdf5_singlestep_container.py  test_hdf5_static_container.py  test_ignore_files.py  test_ignore_items.py  test_json_schema.py  test_ondiskfile.py  test_register_class.py  test_single_step_container.py  test_static_container.py  test_upload.py
