[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SciDataContainer"
authors = [
  { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de" },
  { name = "Sven Kleinert", email = "sven.kleinert@phoenixd.uni-hannover.de" },
]
description = "A container class for the storage of scientific data together with meta data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = ["requests", "jsonschema[format-nongpl]"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/SciDataContainer/SciDataContainer"
Documentation = "https://scidatacontainer.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/SciDataContainer/SciDataContainer/issues"

[tool.hatch.version]
path = "scidatacontainer/__init__.py"

[tool.coverage.report]
omit = ["scidatacontainer/tests/*"]
