[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SciDataContainer"
authors = [
  { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de" },
  { name = "Sven Kleinert", email = "sven.kleinert@phoenixd.uni-hannover.de" },
]
description = "A container class for the storage of scientific data together with meta data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = ["requests", "jsonschema[format-nongpl]"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest~=9.0.2",
  "pytest-cov~=7.0.0",
  "numpy~=2.4.1",
  "opencv-contrib-python~=4.4.0",
  "h5py~=3.15.0",
]

[project.urls]
"Homepage" = "https://github.com/SciDataContainer/SciDataContainer"
Documentation = "https://scidatacontainer.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/SciDataContainer/SciDataContainer/issues"

[tool.hatch.version]
path = "scidatacontainer/__init__.py"

[tool.coverage.report]
omit = ["scidatacontainer/tests/*"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "numpy~=2.4.1",
  "opencv-contrib-python~=4.13.0",
  "h5py~=3.15.0",
]
